+ fix alignment avatar image

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -685,3 +685,8 @@ html .gsc-search-box .gsc-input > input:focus, html .gsc-input-box-focus {
 	.navbar .search-link-menu { display: block; }
 	.navbar .search { display: none; }
 }
+
+.user-profile img.avatar
+{
+	margin:0 30px 0 20px;
+}
